--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>SAASWAD </title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Industry.INC HTML Template">
+	<meta name="description" content="SAASWAD.com">
 	<meta name="keywords" content="industry, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
