--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -55,6 +55,7 @@
         <!-- Logo -->
         <a href="index.html" class="site-logo">
           <img src="img/logo_saswad.png" height="80" alt="" />
+          <span style="color: black;">Saaswad</span>
         </a>
         <div class="header-right">
           <div class="header-info-box">
@@ -103,10 +104,10 @@
             <div class="row">
               <div class="col-xl-8">
                 <h2>
-                  <span>Power</span><span>& Energy</span><span>Industry</span>
+                  <span>India's Leading Industry Corporation</span>
                 </h2>
                 <a href="#" class="site-btn sb-white mr-4 mb-3">Read More</a>
-                <a href="#" class="site-btn sb-dark">our Services</a>
+                <a href="#" class="site-btn sb-dark">Products</a>
               </div>
             </div>
           </div>
@@ -116,7 +117,7 @@
             <div class="row">
               <div class="col-xl-8">
                 <h2>
-                  <span>Power</span><span>& Energy</span><span>Industry</span>
+                  <span>India's Leading Industry Corporation</span>
                 </h2>
                 <a href="#" class="site-btn sb-white mr-4 mb-3">Read More</a>
                 <a href="#" class="site-btn sb-dark">our Services</a>
