--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -104,7 +104,7 @@
             <div class="row">
               <div class="col-xl-8">
                 <h2>
-                  <span>India's Leading Industry Corporation</span>
+                  <span>Saaswad Heat Transfer And Engineering</span>
                 </h2>
                 <a href="#" class="site-btn sb-white mr-4 mb-3">Read More</a>
                 <a href="#" class="site-btn sb-dark">Products</a>
@@ -134,13 +134,13 @@
       <div class="services-warp">
         <div class="container">
           <div class="row">
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-6 col-md-6">
               <div class="service-item">
                 <div class="si-head">
                   <div class="si-icon">
                     <img src="img/icons/cogwheel.png" alt="" />
                   </div>
-                  <h5>Kaushiv</h5>
+                  <h5>Industrial Radiators</h5>
                 </div>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -149,13 +149,13 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-6 col-md-6">
               <div class="service-item">
                 <div class="si-head">
                   <div class="si-icon">
                     <img src="img/icons/helmet.png" alt="" />
                   </div>
-                  <h5>Profesional Workers</h5>
+                  <h5>Oil Coolers</h5>
                 </div>
                 <p>
                   Quisque orci purus, sodales in est quis, blandit sollicitudin
@@ -164,13 +164,13 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-6 col-md-6">
               <div class="service-item">
                 <div class="si-head">
                   <div class="si-icon">
                     <img src="img/icons/wind-engine.png" alt="" />
                   </div>
-                  <h5>Green Energy</h5>
+                  <h5>Heat Exchangers</h5>
                 </div>
                 <p>
                   Sodales in est quis, blandit sollicitudin est. Nam ornare
@@ -179,13 +179,13 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <div class="col-lg-6 col-md-6">
               <div class="service-item">
                 <div class="si-head">
                   <div class="si-icon">
                     <img src="img/icons/pollution.png" alt="" />
                   </div>
-                  <h5>Power Engineering</h5>
+                  <h5>Charged Air Coolers</h5>
                 </div>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -194,7 +194,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6">
+            <!-- <div class="col-lg-4 col-md-6">
               <div class="service-item">
                 <div class="si-head">
                   <div class="si-icon">
@@ -208,8 +208,8 @@
                   arcu.
                 </p>
               </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
+            </div> -->
+            <!-- <div class="col-lg-4 col-md-6">
               <div class="service-item">
                 <div class="si-head">
                   <div class="si-icon">
@@ -223,7 +223,7 @@
                   interdum.
                 </p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
