--- a/industryinc/index.html
+++ b/industryinc/index.html
@@ -566,7 +566,11 @@
             <div class="col-lg-4 order-2 order-lg-1 p-0">
               <div class="copyright">
                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                Copyright &copy; 2020 All rights reserved | Saaswad
+                Copyright &copy;
+                <script>
+                  document.write(new Date().getFullYear());
+                </script>
+                All rights reserved | Saaswad
               </div>
             </div>
             <div class="col-lg-7 order-1 order-lg-2 p-0">
