done some changes

--- a/industryinc/about.html
+++ b/industryinc/about.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zxx">
   <head>
-    <title>Industry.INC | HTML Template</title>
+    <title>SAASWAD</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Industry.INC HTML Template" />
+    <meta name="description" content="SAASWAD.com" />
     <meta name="keywords" content="industry, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="shortcut icon" />
+    <link href="img/logo_saswad.png" rel="shortcut icon" />
 
     <!-- Google font -->
     <link
@@ -100,7 +100,19 @@
     <!-- Header section end  -->
 
     <!-- Page top section  -->
-    <section class="page-top-section set-bg" data-setbg="img/page-top-bg/1.jpg">
+    <section
+      class="page-top-section"
+      style="
+        min-height: 100%;
+        background: linear-gradient(
+            0deg,
+            rgba(0, 0, 0, 0.3),
+            rgba(0, 0, 0, 0.3)
+          ),
+          url(img/about_cover.jpg);
+        background-size: cover;
+      "
+    >
       <div class="container">
         <div class="row">
           <div class="col-lg-7">
@@ -216,44 +228,63 @@
     <section class="team-section spad">
       <div class="container">
         <div class="team-text">
-          <h2>Our Amazing Team</h2>
-          <p>
+          <h2 style="font-weight: bolder;">
+            Our <span style="color: red;">Vision</span>, Mission and
+            <span style="color: red;">Goal</span>
+          </h2>
+          <!-- <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
             orci purus, sodales in est quis, blandit sollicitudin est. Nam
             ornare ipsum ac accumsan auctor. Donec consequat arcu et commodo
             interdum. Vivamus posuere lorem lacus.Lorem ipsum dolor sit amet,
             consectetur adipiscing elit. Quisque orci purus, sodales in est
             quis, blandit sollicitudin est.
-          </p>
+          </p> -->
         </div>
         <div class="row">
           <div class="col-md-4">
             <div class="team-member">
-              <img src="img/team/1.jpg" alt="" />
+              <!-- <img src="img/team/1.jpg" alt="" /> -->
               <div class="member-info">
-                <h3>Michael Smith</h3>
-                <p>Engeneer Chemist</p>
-                <a href="#" class="site-btn">See C.V.</a>
+                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+                  Our Vision
+                </h3>
+                <p style="font-size: 1rem;">
+                  Our Vision is to be a global leader in the manufacturing of
+                  high-quality heat transfer equipment and sheet metal
+                  equipment.
+                </p>
+                <!-- <a href="#" class="site-btn">See C.V.</a> -->
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="team-member">
-              <img src="img/team/2.jpg" alt="" />
+              <!-- <img src="img/team/1.jpg" alt="" /> -->
               <div class="member-info">
-                <h3>Jessica Steing</h3>
-                <p>Engeneer Chemist</p>
-                <a href="#" class="site-btn">See C.V.</a>
+                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+                  Our Mission
+                </h3>
+                <p style="font-size: 1rem;">
+                  Our Mission is to build and supply optimized quality heat
+                  transfer equipment for diesel, gas and electric application.
+                </p>
+                <!-- <a href="#" class="site-btn">See C.V.</a> -->
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="team-member">
-              <img src="img/team/3.jpg" alt="" />
+              <!-- <img src="img/team/1.jpg" alt="" /> -->
               <div class="member-info">
-                <h3>Chris Williams</h3>
-                <p>Engeneer Chemist</p>
-                <a href="#" class="site-btn">See C.V.</a>
+                <h3 style="font-size: 2rem; margin-bottom: 20px;">
+                  Our Goal
+                </h3>
+                <p style="font-size: 1rem;">
+                  Our Goal is to provide the best solution for our customers in
+                  order to achieve customer delight.
+                </p>
+                <!-- <a href="#" class="site-btn">See C.V.</a> -->
               </div>
             </div>
           </div>
