made three pages

--- a/industryinc/solutions.html
+++ b/industryinc/solutions.html
@@ -331,26 +331,19 @@
                 aria-labelledby="tab-2"
               >
                 <h2>
-                  We produce or supply Goods, & Services, Oils & Lubricants
+                  Mechanically Bonded Radiators
                 </h2>
+                <img src="img/12.jpg" alt="" width="500" />
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Quisque orci purus, sodales in est quis, blandit sollicitudin
-                  est. Nam ornare ipsum ac accumsan auctor. Donec consequat arcu
-                  et commodo interdum. Vivamus posuere lorem lacus.Lorem ipsum
-                  dolor sit amet, consectetur adipiscing elit. Quisque orci
-                  purus, sodales in est quis, blandit sollicitudin est. Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-                  orci purus, sodales in est quis, blandit sollicitudin est. Nam
-                  ornare ipsum ac accumsan auctor.
+                  Unit 2 Pune,India
                 </p>
-                <p>
+                <!-- <p>
                   Quisque orci purus, sodales in est quis, blandit sollicitudin
                   est. Nam ornare ipsum ac accumsan auctor. Donec consequat arcu
                   et commodo interdum. Vivamus posuere lorem lacus.Lorem ipsum
                   dolor sit amet, consectetur adipiscing elit. Quisque orci
                   purus, sodales in est quis
-                </p>
+                </p> -->
               </div>
               <div
                 class="tab-pane fade"
@@ -359,19 +352,19 @@
                 aria-labelledby="tab-3"
               >
                 <h2>
-                  We produce or supply Goods, & Services, Oils & Lubricants
+                  Radiator, Oil cooler and AfterCoolers Assembly
                 </h2>
+                <img src="img/13.jpg" alt="" width="500" />
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Quisque orci purus, sodales in est quis, blandit sollicitudin
-                  est. Nam ornare ipsum ac accumsan auctor. Donec consequat arcu
-                  et commodo interdum. Vivamus posuere lorem lacus.Lorem ipsum
-                  dolor sit amet, consectetur adipiscing elit. Quisque orci
-                  purus, sodales in est quis, blandit sollicitudin est. Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-                  orci purus, sodales in est quis, blandit sollicitudin est. Nam
-                  ornare ipsum ac accumsan auctor.
+                  Application: Screw Compressor
                 </p>
+                <!-- <p>
+                Quisque orci purus, sodales in est quis, blandit sollicitudin
+                est. Nam ornare ipsum ac accumsan auctor. Donec consequat arcu
+                et commodo interdum. Vivamus posuere lorem lacus.Lorem ipsum
+                dolor sit amet, consectetur adipiscing elit. Quisque orci
+                purus, sodales in est quis
+              </p> -->
               </div>
               <div
                 class="tab-pane fade"
@@ -380,28 +373,19 @@
                 aria-labelledby="tab-4"
               >
                 <h2>
-                  We produce or supply Goods, & Services, Oils & Lubricants
+                  Turbo After Cooler
                 </h2>
+                <img src="img/14.jpg" alt="" width="500" />
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Quisque orci purus, sodales in est quis, blandit sollicitudin
-                  est. Nam ornare ipsum ac accumsan auctor. Donec consequat arcu
-                  et commodo interdum. Vivamus posuere lorem lacus.Lorem ipsum
-                  dolor sit amet, consectetur adipiscing elit. Quisque orci
-                  purus, sodales in est quis, blandit sollicitudin est. Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-                  orci purus, sodales in est quis, blandit sollicitudin est. Nam
-                  ornare ipsum ac accumsan auctor.
+                  Unit 2 Pune,India
                 </p>
-                <p>
-                  Quisque orci purus, sodales in est quis, blandit sollicitudin
-                  est. Nam ornare ipsum ac accumsan auctor. Donec consequat arcu
-                  et commodo interdum. Vivamus posuere lorem lacus.Lorem ipsum
-                  dolor sit amet, consectetur adipiscing elit. Quisque orci
-                  purus, sodales in est quis, blandit sollicitudin est. Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit. Quisque
-                  orci purus, sodales in est quis, blandit sollicitudin est.
-                </p>
+                <!-- <p>
+              Quisque orci purus, sodales in est quis, blandit sollicitudin
+              est. Nam ornare ipsum ac accumsan auctor. Donec consequat arcu
+              et commodo interdum. Vivamus posuere lorem lacus.Lorem ipsum
+              dolor sit amet, consectetur adipiscing elit. Quisque orci
+              purus, sodales in est quis
+            </p> -->
               </div>
               <div
                 class="tab-pane fade"
