--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -250,8 +250,10 @@
 						<a href="blog.html" class="current">01.</a>
 						<a href="blog2.html">02.</a>
 			<!--<a href="">03.</a>
-						<a class="next" href="">Next</a>
-			-->
+				-->
+						<a class="next" href="blog2.html">Next</a>
+						
+			
 					</div>
 				</div>
 			</div>
