--- a/industryinc/blog2.html
+++ b/industryinc/blog2.html
@@ -246,11 +246,13 @@
 							
 					</div>
 					<div class="site-pagination">
+                        <a class="next" href="blog.html">Prev</a>
 						<a href="blog.html" class="current">01.</a>
 						<a href="blog2.html">02.</a>
 						<!--<a href="">03.</a>
                         <a class="next" href="">Next</a>
                         -->
+                        
 					</div>
 				</div>
 			</div>
