--- a/industryinc/blog.html
+++ b/industryinc/blog.html
@@ -87,7 +87,7 @@
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</li>
-					<li class="active"><a href="blog.html">Blog</a></li>
+					<li class="active"><a href="blog.html">Facilities</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
