--- a/industryinc/solutions.html
+++ b/industryinc/solutions.html
@@ -387,7 +387,7 @@
               purus, sodales in est quis
             </p> -->
               </div>
-              <div
+              <!-- <div
                 class="tab-pane fade"
                 id="tab-5"
                 role="tabpanel"
@@ -446,7 +446,7 @@
                   Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
                   maecenas accumsan lacus vel facilisis commodo.
                 </p>
-              </div>
+              </div> -->
             </div>
           </div>
           <!-- <div class="col-lg-4">
