--- a/industryinc/solutions.html
+++ b/industryinc/solutions.html
@@ -568,42 +568,41 @@
                 <span class="fw-title">Saaswad</span>
               </div>
               <p>
-                Lorem ipsum dolor sit amet, consec-tetur adipiscing elit.
-                Quisque orci purus, sodales in est quis, blandit sollicitudin
-                est. Nam ornare ipsum ac accumsan auctor. Donec consequat arcu
-                et commodo interdum.
+                We Manufacture 100% Locally and Independentally
               </p>
               <div class="footer-social">
                 <a href=""><i class="fa fa-facebook"></i></a>
                 <a href=""><i class="fa fa-twitter"></i></a>
-                <a href=""><i class="fa fa-dribbble"></i></a>
-                <a href=""><i class="fa fa-behance"></i></a>
+                <!-- <a href=""><i class="fa fa-dribbble"></i></a>
+                <a href=""><i class="fa fa-behance"></i></a> -->
               </div>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="footer-widget">
-              <h2 class="fw-title">Useful Resources</h2>
+              <h2 class="fw-title">Our Products</h2>
               <ul>
-                <li><a href="">Jobs Vacancies</a></li>
-                <li><a href="">Client Testimonials</a></li>
-                <li><a href="">Green Energy</a></li>
-                <li><a href="">Chemical Research</a></li>
-                <li><a href="">Oil Extractions</a></li>
-                <li><a href="">About our Work</a></li>
+                <li>Radiators</li>
+                <li>Mechanically Bonded Radiators</li>
+                <li>
+                  Radiator, Oil cooler and AfterCoolers Assembly
+                </li>
+                <li>Turbo After Cooler</li>
+                <!-- <li><a href="">Oil Extractions</a></li>
+                <li><a href="">About our Work</a></li> -->
               </ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="footer-widget">
-              <h2 class="fw-title">Our Solutions</h2>
+              <h2 class="fw-title">Our Facilities</h2>
               <ul>
-                <li><a href="">Metal Industry</a></li>
-                <li><a href="">Agricultural Engineering</a></li>
-                <li><a href="">Green Energy</a></li>
-                <li><a href="">Chemical Research</a></li>
-                <li><a href="">Oil Extractions</a></li>
-                <li><a href="">Manufactoring</a></li>
+                <li>Punching Machine</li>
+                <li>Cnc Tube Bender 65CNC3XES( 3M), Hybrid</li>
+                <li>Bending Machine</li>
+                <li>CNC Vertical Machine Centre ( BMV 80 TC 20)</li>
+                <li>Shearing Machine</li>
+                <li>Oven</li>
               </ul>
             </div>
           </div>
@@ -615,7 +614,10 @@
                   <img src="img/icons/map-marker.png" alt="" class="" />
                 </div>
                 <div class="fib-text">
-                  <p>Main Str, no 23 NY,<br />New York PK 23589</p>
+                  <p>
+                    B-38/47 PR,Tulsipur<br />
+                    Mahmoorganj,Varanasi Uttar Pradesh,India-221010
+                  </p>
                 </div>
               </div>
               <div class="footer-info-box">
@@ -623,13 +625,16 @@
                   <img src="img/icons/phone.png" alt="" class="" />
                 </div>
                 <div class="fib-text">
-                  <p>+546 990221 123<br />contact@industryalinc.com</p>
+                  <p>
+                    +91 9919911000<br />
+                    info@saaswad.com
+                  </p>
                 </div>
               </div>
               <!-- <form class="footer-search">
-					<input type="text" placeholder="Search" />
-					<button><i class="fa fa-search"></i></button>
-				  </form> -->
+                <input type="text" placeholder="Search" />
+                <button><i class="fa fa-search"></i></button>
+              </form> -->
             </div>
           </div>
         </div>
