--- a/industryinc/contact.html
+++ b/industryinc/contact.html
@@ -220,96 +220,116 @@
 	<!-- Footer section -->
 	<footer class="footer-section spad">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-md-6">
-					<div class="footer-widget about-widget">
-						<div style="margin-bottom: 25px;">
-							<img src="img/logo_saswadw.png" style="margin-right: 5px;" height="30" alt="">
-							<span class="fw-title">Saaswad</span>
-						  </div>
-						<p>Lorem ipsum dolor sit amet, consec-tetur adipiscing elit. Quisque orci purus, sodales in est quis, blandit sollicitudin est. Nam ornare ipsum ac accumsan auctor. Donec consequat arcu et commodo interdum. </p>
-						<div class="footer-social">
-							<a href=""><i class="fa fa-facebook"></i></a>
-							<a href=""><i class="fa fa-twitter"></i></a>
-							<a href=""><i class="fa fa-dribbble"></i></a>
-							<a href=""><i class="fa fa-behance"></i></a>
-						</div>
-					</div>
+		  <div class="row">
+			<div class="col-lg-3 col-md-6">
+			  <div class="footer-widget">
+				<div style="margin-bottom: 25px;">
+				  <img
+					src="img/logo_saswadw.png"
+					style="margin-right: 5px;"
+					height="30"
+					alt=""
+				  />
+				  <span class="fw-title">Saaswad</span>
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-6">
-					<div class="footer-widget">
-						<h2 class="fw-title">Useful Resources</h2>
-						<ul>
-							<li><a href="">Jobs Vacancies</a></li>
-							<li><a href="">Client Testimonials</a></li>
-							<li><a href="">Green  Energy</a></li>
-							<li><a href="">Chemical Research</a></li>
-							<li><a href="">Oil Extractions</a></li>
-							<li><a href="">About our Work</a></li>
-						</ul>
-					</div>
+				<p>
+				  We Manufacture 100% Locally and Independentally
+				</p>
+				<div class="footer-social">
+				  <a href=""><i class="fa fa-facebook"></i></a>
+				  <a href=""><i class="fa fa-twitter"></i></a>
+				  <!-- <a href=""><i class="fa fa-dribbble"></i></a>
+				  <a href=""><i class="fa fa-behance"></i></a> -->
 				</div>
-				<div class="col-lg-3 col-md-6 col-sm-6">
-					<div class="footer-widget">
-						<h2 class="fw-title">Our Solutions</h2>
-						<ul>
-							<li><a href="">Metal Industry</a></li>
-							<li><a href="">Agricultural Engineering</a></li>
-							<li><a href="">Green  Energy</a></li>
-							<li><a href="">Chemical Research</a></li>
-							<li><a href="">Oil Extractions</a></li>
-							<li><a href="">Manufactoring</a></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-3 col-md-6 col-sm-7">
-					<div class="footer-widget">
-						<h2 class="fw-title">Contact Us</h2>
-						<div class="footer-info-box">
-							<div class="fib-icon">
-								<img src="img/icons/map-marker.png" alt="" class="">
-							</div>
-							<div class="fib-text">
-								<p>Main Str, no 23 NY,<br>New York PK 23589</p>
-							</div>
-						</div>
-						<div class="footer-info-box">
-							<div class="fib-icon">
-								<img src="img/icons/phone.png" alt="" class="">
-							</div>
-							<div class="fib-text">
-								<p>+546 990221 123<br>contact@industryalinc.com</p>
-							</div>
-						</div>
-						<form class="footer-search">
-							<input type="text" placeholder="Search">
-							<button><i class="fa fa-search"></i></button>
-						</form>
-					</div>
-				</div>
+			  </div>
 			</div>
+			<div class="col-lg-3 col-md-6 col-sm-6">
+			  <div class="footer-widget">
+				<h2 class="fw-title">Our Products</h2>
+				<ul>
+				  <li>Radiators</li>
+				  <li>Mechanically Bonded Radiators</li>
+				  <li>
+					Radiator, Oil cooler and AfterCoolers Assembly
+				  </li>
+				  <li>Turbo After Cooler</li>
+				  <!-- <li><a href="">Oil Extractions</a></li>
+				  <li><a href="">About our Work</a></li> -->
+				</ul>
+			  </div>
+			</div>
+			<div class="col-lg-3 col-md-6 col-sm-6">
+			  <div class="footer-widget">
+				<h2 class="fw-title">Our Facilities</h2>
+				<ul>
+				  <li>Punching Machine</li>
+				  <li>Cnc Tube Bender 65CNC3XES( 3M), Hybrid</li>
+				  <li>Bending Machine</li>
+				  <li>CNC Vertical Machine Centre ( BMV 80 TC 20)</li>
+				  <li>Shearing Machine</li>
+				  <li>Oven</li>
+				</ul>
+			  </div>
+			</div>
+			<div class="col-lg-3 col-md-6 col-sm-7">
+			  <div class="footer-widget">
+				<h2 class="fw-title">Contact Us</h2>
+				<div class="footer-info-box">
+				  <div class="fib-icon">
+					<img src="img/icons/map-marker.png" alt="" class="" />
+				  </div>
+				  <div class="fib-text">
+					<p>
+					  B-38/47 PR,Tulsipur<br />
+					  Mahmoorganj,Varanasi Uttar Pradesh,India-221010
+					</p>
+				  </div>
+				</div>
+				<div class="footer-info-box">
+				  <div class="fib-icon">
+					<img src="img/icons/phone.png" alt="" class="" />
+				  </div>
+				  <div class="fib-text">
+					<p>
+					  +91 9919911000<br />
+					  info@saaswad.com
+					</p>
+				  </div>
+				</div>
+				<!-- <form class="footer-search">
+				  <input type="text" placeholder="Search" />
+				  <button><i class="fa fa-search"></i></button>
+				</form> -->
+			  </div>
+			</div>
+		  </div>
 		</div>
 		<div class="footer-buttom">
-			<div class="container">
+		  <div class="container">
 			<div class="row">
-				<div class="col-lg-4 order-2 order-lg-1 p-0">
-					<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
+			  <div class="col-lg-4 order-2 order-lg-1 p-0">
+				<div class="copyright">
+				  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+				  Copyright &copy;
+				  <script>
+					document.write(new Date().getFullYear());
+				  </script>
+				  All rights reserved | Saaswad
 				</div>
-				<div class="col-lg-7 order-1 order-lg-2 p-0">
-					<ul class="footer-menu">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About us</a></li>
-						<li><a href="solutions.html">Solutions</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li class="active"><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
+			  </div>
+			  <div class="col-lg-7 order-1 order-lg-2 p-0">
+				<ul class="footer-menu">
+				  <li class="active"><a href="index.html">Home</a></li>
+				  <li><a href="about.html">About us</a></li>
+				  <li><a href="solutions.html">Products</a></li>
+				  <li><a href="blog.html">Facilities</a></li>
+				  <li><a href="contact.html">Contact</a></li>
+				</ul>
+			  </div>
 			</div>
+		  </div>
 		</div>
-		</div>
-	</footer>
+	  </footer>
 	<!-- Footer section end -->
 
 	<!-- Search model -->
