--- a/industryinc/contact.html
+++ b/industryinc/contact.html
@@ -319,11 +319,11 @@
 			  </div>
 			  <div class="col-lg-7 order-1 order-lg-2 p-0">
 				<ul class="footer-menu">
-				  <li class="active"><a href="index.html">Home</a></li>
+				  <li ><a href="index.html">Home</a></li>
 				  <li><a href="about.html">About us</a></li>
 				  <li><a href="solutions.html">Products</a></li>
 				  <li><a href="blog.html">Facilities</a></li>
-				  <li><a href="contact.html">Contact</a></li>
+				  <li class="active"><a href="contact.html">Contact</a></li>
 				</ul>
 			  </div>
 			</div>
